Fix spacing

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -3,7 +3,7 @@ ms-place-order {
   margin: 20px;
 }
 
-ms-bartender-component {
+ms-incoming-batches {
   display: block;
   margin: 20px;
 }
